--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 #root {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
+
+.card {
+  padding: 2em;
+} 
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +49,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
