--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 #root {
+  width: 100%;
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  box-sizing: border-box;
 }
-
-.card {
-  padding: 2em;
-} 
 
 /* #root {
   max-width: 1280px;
