--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+/* sx={{ marginBottom: 5 }} */
+#title {
+  padding-top: 1rem;
+  margin-bottom: 2rem;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
