--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
+
+* {
+  font-family: "Titillium Web", sans-serif;
+}
+
 #root {
+  background-color: #eeeeee;
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -6,9 +13,25 @@
   box-sizing: border-box;
 }
 
+#summary {
+  
+}
+
+.section-title {
+  font-size: 2rem;
+}
+
 #title {
   padding-top: 1rem;
   margin-bottom: 2rem;
+}
+
+#inicio-title {
+  font-size: 4rem;
+}
+
+#inicio-text {
+  font-size: 1.5rem;
 }
 
 #table {
@@ -27,6 +50,14 @@
 }
 
 @media (max-width: 900px) {
+  #inicio-title {
+    font-size: 2rem;
+  }
+  
+  #inicio-text {
+    font-size: 1rem;
+  }
+
   #table {
     margin: 1rem 1rem;
   }
