dar estilos a los componentes

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -5,9 +5,8 @@
 }
 
 :root {
-	--mainColor: #2779a7;
-	--mainColorLight: #68b1db;
-	--secondaryColor: #49c5b6;
+	--mainColor: #123f77;
+	--secondaryColor: #37cae5;
 	--textColor: #eee;
 }
 
