--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -10,6 +10,15 @@
 	--textColor: #eee;
 }
 
+#logo {
+	height: 72px;
+	margin-right: 15px;
+}
+
+#logo-title {
+	font-size: 1.5rem;
+}
+
 header {
 	width: 100%;
 	display: flex;
@@ -23,8 +32,8 @@ header {
 
 nav a {
 	margin: 0 1rem;
-	color: var(--textColor);
 	text-decoration: none;
+	color: var(--textColor);
 }
 
 nav a:hover {
