--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,6 +19,10 @@ div[id] {
   font-size: 2rem;
 }
 
+.section-text {
+  font-size: 1rem;
+}
+
 #title {
   padding-top: 1rem;
   margin-bottom: 2rem;
